PDF Pólizas: En suma asegurada va el precio del carro.

--- a/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
@@ -129,7 +129,7 @@
     <th colspan="7" rowspan="1">DESCRIPCIÓN DEL AUTOMÓVIL</th>
   </tr>
   <tr>
-    <td colspan="7">Unidad No.</td>
+    <td colspan="7">Unidad No: 1</td>
   </tr>
   <tr>
     <td colspan="2">MARCA: {{ conductor.marca }}</td>
@@ -154,7 +154,7 @@
     <td colspan="2">PUESTOS:</td>
   </tr>
   <tr>
-    <td colspan="7">SUMA ASEGURADA: {{ solicitud.cotizacion.total }}</td>
+    <td colspan="7">SUMA ASEGURADA: {{ conductor.valor }}</td>
   </tr>
   <tr style="height: 100%; ">
     <th colspan="2">RIESGOS CUBIERTOS</th>
@@ -338,7 +338,7 @@
     <th colspan="7" rowspan="1">DESCRIPCIÓN DEL AUTOMÓVIL</th>
   </tr>
   <tr>
-    <td colspan="7">Unidad No.</td>
+    <td colspan="7">Unidad No: 1</td>
   </tr>
   <tr>
     <td colspan="2">MARCA: {{ conductor.marca }}</td>
@@ -359,7 +359,7 @@
     <td colspan="2">PUESTOS:</td>
   </tr>
   <tr>
-    <td colspan="7">SUMA ASEGURADA: {{ solicitud.cotizacion.total }}</td>
+    <td colspan="7">SUMA ASEGURADA: {{ conductor.valor }}</td>
   </tr>
   <tr style="height: 100%; ">
     <th colspan="2">RIESGOS CUBIERTOS</th>
