--- a/cotizador_acerta/templates/polizas/emision_todas_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_todas_pdf.html
@@ -137,7 +137,7 @@
     <th colspan="7" rowspan="1">DESCRIPCIÓN DEL AUTOMÓVIL</th>
   </tr>
   <tr>
-    <td colspan="7">Unidad No.</td>
+    <td colspan="7">Unidad No: 1</td>
   </tr>
   <tr>
     <td colspan="2">MARCA: {{ conductor.marca }}</td>
@@ -162,7 +162,7 @@
     <td colspan="2">PUESTOS:</td>
   </tr>
   <tr>
-    <td colspan="7">SUMA ASEGURADA: {{ solicitud.cotizacion.total }}</td>
+    <td colspan="7">SUMA ASEGURADA: {{ conductor.valor }}</td>
   </tr>
   <tr style="height: 100%; ">
     <th colspan="2">RIESGOS CUBIERTOS</th>
@@ -347,7 +347,7 @@
     <th colspan="7" rowspan="1">DESCRIPCIÓN DEL AUTOMÓVIL</th>
   </tr>
   <tr>
-    <td colspan="7">Unidad No.</td>
+    <td colspan="7">Unidad No: 1</td>
   </tr>
   <tr>
     <td colspan="2">MARCA: {{ conductor.marca }}</td>
@@ -368,7 +368,7 @@
     <td colspan="2">PUESTOS:</td>
   </tr>
   <tr>
-    <td colspan="7">SUMA ASEGURADA: {{ solicitud.cotizacion.total }}</td>
+    <td colspan="7">SUMA ASEGURADA: {{ conductor.valor }}</td>
   </tr>
   <tr style="height: 100%; ">
     <th colspan="2">RIESGOS CUBIERTOS</th>
@@ -552,7 +552,7 @@
     <th colspan="7" rowspan="1">DESCRIPCIÓN DEL AUTOMÓVIL</th>
   </tr>
   <tr>
-    <td colspan="7">Unidad No.</td>
+    <td colspan="7">Unidad No: 1</td>
   </tr>
   <tr>
     <td colspan="2">MARCA: {{ conductor.marca }}</td>
@@ -573,7 +573,7 @@
     <td colspan="2">PUESTOS:</td>
   </tr>
   <tr>
-    <td colspan="7">SUMA ASEGURADA: {{ solicitud.cotizacion.total }}</td>
+    <td colspan="7">SUMA ASEGURADA: {{ conductor.valor }}</td>
   </tr>
   <tr style="height: 100%; ">
     <th colspan="2">RIESGOS CUBIERTOS</th>
