--- a/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
@@ -243,13 +243,13 @@
   <tr>
     <td colspan="3">EMISIÓN PÓLIZA NUEVA<br><br><br><br></td>
     <td colspan="2" style="margin-left: 10px;"><b>SUB-TOTAL:</b><br><b>DESCUENTO ADICIONAL:</b><br>OTROS CARGOS:<br><b>SUB-TOTAL A PAGAR:</b><br>IMPUESTO %:<br><b>TOTAL A PAGAR:</b></td>
-    <td colspan="1" style="text-align: right;">B/.<br>B/.<br>B/.<br>B/.<br>B/.<br>B/.</td>
+    <td colspan="1" style="text-align: right;">B/.<br>B/.<br>B/.<br>B/.<br>6.00&nbsp; B/.<br>B/.</td>
     <td colspan="1" style="text-align: right;">{{ solicitud.cotizacion.subtotal }}<br>{{ solicitud.cotizacion.descuento }}<br>.00<br>{{ subtotal }}<br>{{ solicitud.cotizacion.impuestos }}<br>{{ solicitud.cotizacion.total }}</td>
   </tr>
 
 
   <tr style="height: 100%;">
-    <td colspan="7"><b>NOTA IMPORTANTE:</b> ESTA POLIZA PUEDE SER CANCELADA POR FALTA DE PAGO DE CONFORMIDAD CON LA LEY 1br2 DEL 3 DE ABRIL DE 2012 Y POR LA OPCIÓN DE AMBAS PARTES SEGÚN SE DISPONGA EN LAS CONDICIONES GENERALES DE LA POLIZA, SE ACUERDA QUE SOLO LOS ENDOSOS AQUÍ MENCIONADOS Y/O ADHERIDOS Y LOS QUE SE ADHIERAN EN EL FUTURO SON PARTES INTEGRALES DE LA POLIZA.
+    <td colspan="7"><b>NOTA IMPORTANTE:</b> ESTA POLIZA PUEDE SER CANCELADA POR FALTA DE PAGO DE CONFORMIDAD CON LA LEY 12 DEL 3 DE ABRIL DE 2012 Y POR LA OPCIÓN DE AMBAS PARTES SEGÚN SE DISPONGA EN LAS CONDICIONES GENERALES DE LA POLIZA, SE ACUERDA QUE SOLO LOS ENDOSOS AQUÍ MENCIONADOS Y/O ADHERIDOS Y LOS QUE SE ADHIERAN EN EL FUTURO SON PARTES INTEGRALES DE LA POLIZA.
     </td>
   </tr>
   <tr>
@@ -448,13 +448,13 @@
   <tr>
     <td colspan="3">EMISIÓN PÓLIZA NUEVA<br><br><br><br></td>
     <td colspan="2" style="margin-left: 10px;"><b>SUB-TOTAL:</b><br><b>DESCUENTO ADICIONAL:</b><br>OTROS CARGOS:<br><b>SUB-TOTAL A PAGAR:</b><br>IMPUESTO %:<br><b>TOTAL A PAGAR:</b></td>
-    <td colspan="1" style="text-align: right;">B/.<br>B/.<br>B/.<br>B/.<br>B/.<br>B/.</td>
+    <td colspan="1" style="text-align: right;">B/.<br>B/.<br>B/.<br>B/.<br>6.00&nbsp; B/.<br>B/.</td>
     <td colspan="1" style="text-align: right;">{{ solicitud.cotizacion.subtotal }}<br>{{ solicitud.cotizacion.descuento }}<br>.00<br>{{ subtotal }}<br>{{ solicitud.cotizacion.impuestos }}<br>{{ solicitud.cotizacion.total }}</td>
   </tr>
 
 
   <tr style="height: 100%;">
-    <td colspan="7"><b>NOTA IMPORTANTE:</b> ESTA POLIZA PUEDE SER CANCELADA POR FALTA DE PAGO DE CONFORMIDAD CON LA LEY 1br2 DEL 3 DE ABRIL DE 2012 Y POR LA OPCIÓN DE AMBAS PARTES SEGÚN SE DISPONGA EN LAS CONDICIONES GENERALES DE LA POLIZA, SE ACUERDA QUE SOLO LOS ENDOSOS AQUÍ MENCIONADOS Y/O ADHERIDOS Y LOS QUE SE ADHIERAN EN EL FUTURO SON PARTES INTEGRALES DE LA POLIZA.
+    <td colspan="7"><b>NOTA IMPORTANTE:</b> ESTA POLIZA PUEDE SER CANCELADA POR FALTA DE PAGO DE CONFORMIDAD CON LA LEY 12 DEL 3 DE ABRIL DE 2012 Y POR LA OPCIÓN DE AMBAS PARTES SEGÚN SE DISPONGA EN LAS CONDICIONES GENERALES DE LA POLIZA, SE ACUERDA QUE SOLO LOS ENDOSOS AQUÍ MENCIONADOS Y/O ADHERIDOS Y LOS QUE SE ADHIERAN EN EL FUTURO SON PARTES INTEGRALES DE LA POLIZA.
     </td>
   </tr>
   <tr>
