PDF Pólizas: Fecha final en letras pequeñas. Párrafo de la nota, justificado.

--- a/cotizador_acerta/templates/polizas/emision_todas_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_todas_pdf.html
@@ -257,11 +257,11 @@
 
 
   <tr style="height: 100%;">
-    <td colspan="7"><b>NOTA IMPORTANTE:</b> ESTA POLIZA PUEDE SER CANCELADA POR FALTA DE PAGO DE CONFORMIDAD CON LA LEY 12 DEL 3 DE ABRIL DE 2012 Y POR LA OPCIÓN DE AMBAS PARTES SEGÚN SE DISPONGA EN LAS CONDICIONES GENERALES DE LA POLIZA, SE ACUERDA QUE SOLO LOS ENDOSOS AQUÍ MENCIONADOS Y/O ADHERIDOS Y LOS QUE SE ADHIERAN EN EL FUTURO SON PARTES INTEGRALES DE LA POLIZA.
+    <td colspan="7" style="text-align: justify;"><b>NOTA IMPORTANTE:</b> ESTA POLIZA PUEDE SER CANCELADA POR FALTA DE PAGO DE CONFORMIDAD CON LA LEY 12 DEL 3 DE ABRIL DE 2012 Y POR LA OPCIÓN DE AMBAS PARTES SEGÚN SE DISPONGA EN LAS CONDICIONES GENERALES DE LA POLIZA, SE ACUERDA QUE SOLO LOS ENDOSOS AQUÍ MENCIONADOS Y/O ADHERIDOS Y LOS QUE SE ADHIERAN EN EL FUTURO SON PARTES INTEGRALES DE LA POLIZA.
     </td>
   </tr>
   <tr>
-    <td colspan="7"; style="font-size:8px">Queda entendido que el ASEGURADO y Acerta Seguros, S.A. han leído y convenido las Condiciones Generales y articulares aprobadas por la Superintendencia de Seguros y Reaseguro de Panamá que forman parte de esta póliza, en fé de lo cual firman en Panamá, República de Panamá, hoy, 08 de SEPTIEMBRE de 2016
+    <td colspan="7"; style="font-size:8px">Queda entendido que el ASEGURADO y Acerta Seguros, S.A. han leído y convenido las Condiciones Generales y articulares aprobadas por la Superintendencia de Seguros y Reaseguro de Panamá que forman parte de esta póliza, en fé de lo cual firman en Panamá, República de Panamá, hoy, {{ fecha.day }} de {{ mes }} de {{ fecha.year }}
     </td>
   </tr>
    <tr>
@@ -463,11 +463,11 @@
 
 
   <tr style="height: 100%;">
-    <td colspan="7"><b>NOTA IMPORTANTE:</b> ESTA POLIZA PUEDE SER CANCELADA POR FALTA DE PAGO DE CONFORMIDAD CON LA LEY 12 DEL 3 DE ABRIL DE 2012 Y POR LA OPCIÓN DE AMBAS PARTES SEGÚN SE DISPONGA EN LAS CONDICIONES GENERALES DE LA POLIZA, SE ACUERDA QUE SOLO LOS ENDOSOS AQUÍ MENCIONADOS Y/O ADHERIDOS Y LOS QUE SE ADHIERAN EN EL FUTURO SON PARTES INTEGRALES DE LA POLIZA.
+    <td colspan="7" style="text-align: justify;"><b>NOTA IMPORTANTE:</b> ESTA POLIZA PUEDE SER CANCELADA POR FALTA DE PAGO DE CONFORMIDAD CON LA LEY 12 DEL 3 DE ABRIL DE 2012 Y POR LA OPCIÓN DE AMBAS PARTES SEGÚN SE DISPONGA EN LAS CONDICIONES GENERALES DE LA POLIZA, SE ACUERDA QUE SOLO LOS ENDOSOS AQUÍ MENCIONADOS Y/O ADHERIDOS Y LOS QUE SE ADHIERAN EN EL FUTURO SON PARTES INTEGRALES DE LA POLIZA.
     </td>
   </tr>
   <tr>
-    <td colspan="7"; style="font-size:8px">Queda entendido que el ASEGURADO y Acerta Seguros, S.A. han leído y convenido las Condiciones Generales y articulares aprobadas por la Superintendencia de Seguros y Reaseguro de Panamá que forman parte de esta póliza, en fé de lo cual firman en Panamá, República de Panamá, hoy, 08 de SEPTIEMBRE de 2016
+   <td colspan="7"; style="font-size:8px">Queda entendido que el ASEGURADO y Acerta Seguros, S.A. han leído y convenido las Condiciones Generales y articulares aprobadas por la Superintendencia de Seguros y Reaseguro de Panamá que forman parte de esta póliza, en fé de lo cual firman en Panamá, República de Panamá, hoy, {{ fecha.day }} de {{ mes }} de {{ fecha.year }}
     </td>
   </tr>
    <tr>
@@ -668,11 +668,11 @@
 
 
   <tr style="height: 100%;">
-    <td colspan="7"><b>NOTA IMPORTANTE:</b> ESTA POLIZA PUEDE SER CANCELADA POR FALTA DE PAGO DE CONFORMIDAD CON LA LEY 12 DEL 3 DE ABRIL DE 2012 Y POR LA OPCIÓN DE AMBAS PARTES SEGÚN SE DISPONGA EN LAS CONDICIONES GENERALES DE LA POLIZA, SE ACUERDA QUE SOLO LOS ENDOSOS AQUÍ MENCIONADOS Y/O ADHERIDOS Y LOS QUE SE ADHIERAN EN EL FUTURO SON PARTES INTEGRALES DE LA POLIZA.
+    <td colspan="7" style="text-align: justify;"><b>NOTA IMPORTANTE:</b> ESTA POLIZA PUEDE SER CANCELADA POR FALTA DE PAGO DE CONFORMIDAD CON LA LEY 12 DEL 3 DE ABRIL DE 2012 Y POR LA OPCIÓN DE AMBAS PARTES SEGÚN SE DISPONGA EN LAS CONDICIONES GENERALES DE LA POLIZA, SE ACUERDA QUE SOLO LOS ENDOSOS AQUÍ MENCIONADOS Y/O ADHERIDOS Y LOS QUE SE ADHIERAN EN EL FUTURO SON PARTES INTEGRALES DE LA POLIZA.
     </td>
   </tr>
   <tr>
-    <td colspan="7"; style="font-size:8px">Queda entendido que el ASEGURADO y Acerta Seguros, S.A. han leído y convenido las Condiciones Generales y articulares aprobadas por la Superintendencia de Seguros y Reaseguro de Panamá que forman parte de esta póliza, en fé de lo cual firman en Panamá, República de Panamá, hoy, 08 de SEPTIEMBRE de 2016
+    <td colspan="7"; style="font-size:8px">Queda entendido que el ASEGURADO y Acerta Seguros, S.A. han leído y convenido las Condiciones Generales y articulares aprobadas por la Superintendencia de Seguros y Reaseguro de Panamá que forman parte de esta póliza, en fé de lo cual firman en Panamá, República de Panamá, hoy, {{ fecha.day }} de {{ mes }} de {{ fecha.year }}
     </td>
   </tr>
    <tr>
