--- a/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
@@ -4,41 +4,26 @@
 {% block content %}
 
 <head style="height: 100%;">
-  <style>
+  <style type="text/css">
     table {
         font-family: arial, sans-serif;
-        
         border: none;
         width: 100%;
-        height: 100%;
-    }
-    table1 {
-        font-family: arial, sans-serif;
-        border-collapse: collapse;
-        border: none;
-        width: 100%;
-        height: 100%;
     }
 
-    td {
+    table td {
         border: 1px solid #dddddd;
         text-align: left;
-        padding: 2px;
+        white-space: nowrap;
+        padding: 1px;
     }
     th {
-      border: 1px solid #dddddd;
+        border: 1px solid #dddddd;
         text-align: center;
         padding: 2px;
         background-color: #dddddd;
     }
-    footer {
-        clear: both;
-        position: relative;
-        z-index: 10;
-        height: 3em;
-        margin-top: -3em;
-    }
-  </style>
+   </style>
 
   <style type="text/css">
     @media screen {
@@ -75,6 +60,7 @@
     </td>
     </tr>
   </table>
+<br>  
 <table height="100000%" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
   <tr>
     <td  colspan="3"><b>PÓLIZA:</b> {{solicitud.num}}</td>
@@ -164,8 +150,8 @@
     <th>DEDUCIBLE</th>
     <th>PRIMA</th>
   </tr>
-  <tr style="height: 40;">
-    <td colspan="3">COBERTURA A - LESIONES CORPORALES</td>
+  <tr style="white-space: nowrap;">
+    <td colspan="3" style="white-space: nowrap;">COBERTURA A - LESIONES CORPORALES</td>
     <td colspan="1" style="text-align: center;">{{ lesiones_corporales.0 }}</td>
     <td colspan="1" style="text-align: center;">{{ lesiones_corporales.1 }}</td>
     <td colspan="1" style="text-align: center;"> </td>
@@ -238,6 +224,9 @@
     <td style="text-align: center;">{{solicitud.cotizacion.endoso.precio}}</td>
   </tr>
   {% endif %}
+  <tr style="height: 40; ">
+    <td colspan="8"><br><br><br></td>
+  </tr>
   <tr>
     <td colspan="4">EMISIÓN PÓLIZA NUEVA<br><br><br><br></td>
     <td colspan="2" style="margin-left: 10px;"><b>SUB-TOTAL:</b><br><b>DESCUENTO ADICIONAL:</b><br>OTROS CARGOS:<br><b>SUB-TOTAL A PAGAR:</b><br>IMPUESTO %:<br><b>TOTAL A PAGAR:</b></td>
@@ -256,7 +245,7 @@
   </tr>
    <tr>
     <td style="text-align: center;" colspan="4"><br><br><br>_____________________________ <br> Asegurado</td>
-    <td style="text-align: center;" colspan="4"><img src="{% static 'img/firma.jpg' %}" width="150" height="53"><br>_____________________________ <br>Acerta Seguros S.A.</td>
+    <td style="text-align: center;" colspan="4"><img src="{% static 'img/firma.jpg' %}" width="150" height="53"><br>_____________________________ <br>Acerta Seguros S.A.<br>{{fecha.month}}/{{fecha.year}}/{{solicitud.num}}/WEB</td>
   </tr>
  </table>
  <table height="100000%" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;" cellspacing="0" cellpadding="0">
@@ -282,6 +271,7 @@
     </td>
     </tr>
   </table>
+<br>  
 <table height="100000%" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
   <tr>
     <td  colspan="3"><b>PÓLIZA:</b> {{solicitud.num}}</td>
@@ -371,8 +361,8 @@
     <th>DEDUCIBLE</th>
     <th>PRIMA</th>
   </tr>
-  <tr style="height: 40;">
-    <td colspan="3">COBERTURA A - LESIONES CORPORALES</td>
+  <tr style="white-space: nowrap;">
+    <td colspan="3" style="white-space: nowrap;">COBERTURA A - LESIONES CORPORALES</td>
     <td colspan="1" style="text-align: center;">{{ lesiones_corporales.0 }}</td>
     <td colspan="1" style="text-align: center;">{{ lesiones_corporales.1 }}</td>
     <td colspan="1" style="text-align: center;"> </td>
@@ -445,6 +435,9 @@
     <td style="text-align: center;">{{solicitud.cotizacion.endoso.precio}}</td>
   </tr>
   {% endif %}
+  <tr style="height: 40; ">
+    <td colspan="8"><br><br><br></td>
+  </tr>
   <tr>
     <td colspan="4">EMISIÓN PÓLIZA NUEVA<br><br><br><br></td>
     <td colspan="2" style="margin-left: 10px;"><b>SUB-TOTAL:</b><br><b>DESCUENTO ADICIONAL:</b><br>OTROS CARGOS:<br><b>SUB-TOTAL A PAGAR:</b><br>IMPUESTO %:<br><b>TOTAL A PAGAR:</b></td>
@@ -463,7 +456,7 @@
   </tr>
    <tr>
     <td style="text-align: center;" colspan="4"><br><br><br>_____________________________ <br> Asegurado</td>
-    <td style="text-align: center;" colspan="4"><img src="{% static 'img/firma.jpg' %}" width="150" height="53"><br>_____________________________ <br>Acerta Seguros S.A.</td>
+    <td style="text-align: center;" colspan="4"><img src="{% static 'img/firma.jpg' %}" width="150" height="53"><br>_____________________________ <br>Acerta Seguros S.A.<br>{{fecha.month}}/{{fecha.year}}/{{solicitud.num}}/WEB</td>
   </tr>
  </table>
  <table height="100000%" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;" cellspacing="0" cellpadding="0">
