PDF Pólizas: nota de pérdida total. Widget de Acreedor/Leasing.

--- a/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
@@ -140,7 +140,8 @@
     <td colspan="2">PUESTOS:</td>
   </tr>
   <tr>
-    <td colspan="8">SUMA ASEGURADA: {{ conductor.valor }}</td>
+    <td colspan="2">SUMA ASEGURADA: {{ conductor.valor }}</td>
+    <td colspan="6" style="font-size:8px; margin-left: 10px;">Cualquier pérdida Total bajo los riesgos D, E, F y G serán pagados de acuerdo al interés que resulte tener el asegurado y acreedor hipotecario.</td>
   </tr>
   <tr style="height: 100%; ">
     <th colspan="3">RIESGOS CUBIERTOS</th>
@@ -351,7 +352,8 @@
     <td colspan="2">PUESTOS:</td>
   </tr>
   <tr>
-    <td colspan="8">SUMA ASEGURADA: {{ conductor.valor }}</td>
+    <td colspan="2">SUMA ASEGURADA: {{ conductor.valor }}</td>
+    <td colspan="6" style="font-size:8px; margin-left: 10px;">Cualquier pérdida Total bajo los riesgos D, E, F y G serán pagados de acuerdo al interés que resulte tener el asegurado y acreedor hipotecario.</td>
   </tr>
   <tr style="height: 100%; ">
     <th colspan="3">RIESGOS CUBIERTOS</th>
