--- a/cotizador_acerta/templates/polizas/pdf_personaNatural.html
+++ b/cotizador_acerta/templates/polizas/pdf_personaNatural.html
@@ -925,7 +925,11 @@
 									<td colspan="2"><span>País de procedencia:</span>&nbsp;<span>{{conductor2.juridico_pais_procedencia}}</span> </td>
 								</tr>
 								<tr style="border: 2px solid #999; padding-top: 2px; padding-bottom: -1px;">
-									<td colspan="2"><span>Fecha de constitución:</span>&nbsp;<span>{{convert_fecha_const}}</span> </td>
+									{% if conductor2.es_juridico == False %}
+										<td colspan="2"><span>Fecha de constitución:</span>&nbsp;<span></span> </td>
+									{% else %}
+										<td colspan="2"><span>Fecha de constitución:</span>&nbsp;<span>{{convert_fecha_const}}</span> </td>
+									{% endif %}
 								</tr>
 							</table>
 						</p>
